@@ -1,3 +1,7 @@
+2006-08-12 11:39  ntiffin
+
+	* ChangeLog, DataSource.m, SqlDocument.m: More memory cleanup.
+
 2006-08-11 13:03  ntiffin
 
 	* ChangeLog, SqlDocument.m: Fix some compiler warnings.
